# Happyweed

./: .gitignore  README.md  TheWinner2.py  pyproject.toml
.github/workflows/: ci.yml
data/golden_levels/41/: 01.tsv  02.tsv  03.tsv  04.tsv  05.tsv  06.tsv  07.tsv  08.tsv  09.tsv  10.tsv  11.tsv  12.tsv  13.tsv  14.tsv  15.tsv  16.tsv  17.tsv  18.tsv  19.tsv  20.tsv  21.tsv  22.tsv  23.tsv  24.tsv  25.tsv
docs/: ROADMAP.md  architecture.md  lst_crossref.csv  lst_notes.md
src/happyweed/: __init__.py  config.py  grid.py  rng.py  tiles.py  timing.py
src/happyweed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/happyweed/engine/: collisions.py  cop.py  player.py  state.py  timing.py
src/happyweed/mapgen/: carve.py  generator - Copy.py  generator.py  jail.py  placement.py
src/happyweed/render/: tileset.py
src/happyweed/ui/: hud.py  status_bar.py
tests/: test_carve_vs_tw.py  test_full_vs_tw.py  test_golden_levels.py  test_hud_digits.py  test_player_walk.py  test_rng.py  test_runtime_collisions.py  test_tiles.py  test_timing_tickcount.py
tools/: hwtool.py  render_grid.py  run_game.py  run_viewer.py
